Update Vite2.x + Vue3.x + TypeScript Starter 065b6240477095a253915be51a74b8df61e07714

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
       content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0"
     />
     <title>pure-admin-thin</title>
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/vue-pure-admin/favicon.ico" />
     <script>
       window.process = {};
     </script>
-    <script type="module" crossorigin src="/static/js/index-6cfb16c7.js"></script>
-    <link rel="modulepreload" crossorigin href="/static/js/runtime-core.esm-bundler-5e6ff93b.js">
-    <link rel="modulepreload" crossorigin href="/static/js/vue-router-6a953c55.js">
-    <link rel="modulepreload" crossorigin href="/static/js/index-72884aac.js">
-    <link rel="modulepreload" crossorigin href="/static/js/index-7330f91f.js">
-    <link rel="modulepreload" crossorigin href="/static/js/index-23c1b735.js">
-    <link rel="modulepreload" crossorigin href="/static/js/_plugin-vue_export-helper-c27b6911.js">
-    <link rel="stylesheet" href="/static/css/index-338d9b1d.css">
-    <link rel="stylesheet" href="/static/css/index-875d71e4.css">
-    <link rel="stylesheet" href="/assets/layout-theme-default.css" id="theme-link-tag">
+    <script type="module" crossorigin src="/vue-pure-admin/static/js/index-be08e307.js"></script>
+    <link rel="modulepreload" crossorigin href="/vue-pure-admin/static/js/runtime-core.esm-bundler-5e6ff93b.js">
+    <link rel="modulepreload" crossorigin href="/vue-pure-admin/static/js/vue-router-6a953c55.js">
+    <link rel="modulepreload" crossorigin href="/vue-pure-admin/static/js/index-cc370a92.js">
+    <link rel="modulepreload" crossorigin href="/vue-pure-admin/static/js/index-b8df4e4d.js">
+    <link rel="modulepreload" crossorigin href="/vue-pure-admin/static/js/index-9f32dc88.js">
+    <link rel="modulepreload" crossorigin href="/vue-pure-admin/static/js/_plugin-vue_export-helper-c27b6911.js">
+    <link rel="stylesheet" href="/vue-pure-admin/static/css/index-338d9b1d.css">
+    <link rel="stylesheet" href="/vue-pure-admin/static/css/index-ef7ab578.css">
+    <link rel="stylesheet" href="/vue-pure-admin/assets/layout-theme-default.css" id="theme-link-tag">
   </head>
 
   <body>
