Update Vite2.x + Vue3.x + TypeScript Starter 49a8ceea8ad1f2780855775fc3d01c9e10dc7795

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
       content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0"
     />
     <title>pure-admin-thin</title>
-    <link rel="icon" href="/vue-pure-admin/vue-pure-admin/favicon.ico" />
+    <link rel="icon" href="/vue-pure-admin/favicon.ico" />
     <script>
       window.process = {};
     </script>
-    <script type="module" crossorigin src="/vue-pure-admin/vue-pure-admin/static/js/index-58db254d.js"></script>
-    <link rel="modulepreload" crossorigin href="/vue-pure-admin/vue-pure-admin/static/js/runtime-core.esm-bundler-5e6ff93b.js">
-    <link rel="modulepreload" crossorigin href="/vue-pure-admin/vue-pure-admin/static/js/vue-router-6a953c55.js">
-    <link rel="modulepreload" crossorigin href="/vue-pure-admin/vue-pure-admin/static/js/index-db639d1c.js">
-    <link rel="modulepreload" crossorigin href="/vue-pure-admin/vue-pure-admin/static/js/index-5a5ee942.js">
-    <link rel="modulepreload" crossorigin href="/vue-pure-admin/vue-pure-admin/static/js/index-ba66840f.js">
-    <link rel="modulepreload" crossorigin href="/vue-pure-admin/vue-pure-admin/static/js/_plugin-vue_export-helper-c27b6911.js">
-    <link rel="stylesheet" href="/vue-pure-admin/vue-pure-admin/static/css/index-338d9b1d.css">
-    <link rel="stylesheet" href="/vue-pure-admin/vue-pure-admin/static/css/index-87eb9a0b.css">
-    <link rel="stylesheet" href="/vue-pure-admin/vue-pure-admin/assets/layout-theme-default.css" id="theme-link-tag">
+    <script type="module" crossorigin src="/vue-pure-admin/static/js/index-62414e5e.js"></script>
+    <link rel="modulepreload" crossorigin href="/vue-pure-admin/static/js/runtime-core.esm-bundler-5e6ff93b.js">
+    <link rel="modulepreload" crossorigin href="/vue-pure-admin/static/js/vue-router-6a953c55.js">
+    <link rel="modulepreload" crossorigin href="/vue-pure-admin/static/js/index-4780fb02.js">
+    <link rel="modulepreload" crossorigin href="/vue-pure-admin/static/js/index-082281b1.js">
+    <link rel="modulepreload" crossorigin href="/vue-pure-admin/static/js/index-ef8ace69.js">
+    <link rel="modulepreload" crossorigin href="/vue-pure-admin/static/js/_plugin-vue_export-helper-c27b6911.js">
+    <link rel="stylesheet" href="/vue-pure-admin/static/css/index-338d9b1d.css">
+    <link rel="stylesheet" href="/vue-pure-admin/static/css/index-ef7ab578.css">
+    <link rel="stylesheet" href="/vue-pure-admin/assets/layout-theme-default.css" id="theme-link-tag">
   </head>
 
   <body>
