Update Vite2.x + Vue3.x + TypeScript Starter 4a3e37103c95850ef8b68859c9230c85ae3296e7

--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
     <script>
       window.process = {};
     </script>
-    <script type="module" crossorigin src="/vue-pure-admin/static/js/index-62414e5e.js"></script>
+    <script type="module" crossorigin src="/vue-pure-admin/static/js/index-fc3ccd35.js"></script>
     <link rel="modulepreload" crossorigin href="/vue-pure-admin/static/js/runtime-core.esm-bundler-5e6ff93b.js">
     <link rel="modulepreload" crossorigin href="/vue-pure-admin/static/js/vue-router-6a953c55.js">
-    <link rel="modulepreload" crossorigin href="/vue-pure-admin/static/js/index-4780fb02.js">
-    <link rel="modulepreload" crossorigin href="/vue-pure-admin/static/js/index-082281b1.js">
-    <link rel="modulepreload" crossorigin href="/vue-pure-admin/static/js/index-ef8ace69.js">
+    <link rel="modulepreload" crossorigin href="/vue-pure-admin/static/js/index-abf2ad1d.js">
+    <link rel="modulepreload" crossorigin href="/vue-pure-admin/static/js/index-7c335e87.js">
+    <link rel="modulepreload" crossorigin href="/vue-pure-admin/static/js/index-0e112bae.js">
     <link rel="modulepreload" crossorigin href="/vue-pure-admin/static/js/_plugin-vue_export-helper-c27b6911.js">
+    <link rel="modulepreload" crossorigin href="/vue-pure-admin/static/js/dayjs.min-a39f8444.js">
     <link rel="stylesheet" href="/vue-pure-admin/static/css/index-338d9b1d.css">
-    <link rel="stylesheet" href="/vue-pure-admin/static/css/index-ef7ab578.css">
+    <link rel="stylesheet" href="/vue-pure-admin/static/css/index-45283fd8.css">
     <link rel="stylesheet" href="/vue-pure-admin/assets/layout-theme-default.css" id="theme-link-tag">
   </head>
 
